Fixed button spacing and minor stylistic adjustments

--- a/E-EEAC.css
+++ b/E-EEAC.css
@@ -31,6 +31,7 @@ body {
 	padding-right: 20px;
 	font-family: spectralFont;
 	text-align: center;
+	width: 100%;
 }
 
 .container h2 {
@@ -50,4 +51,17 @@ li a {
 
 .row {
 	align-self: center;
+}
+
+.button-row {
+	padding-top: 75px;
+	padding-bottom: 25px;
+	width: 100%;
+}
+
+.button-row button {
+	background-color: black;
+	height: 50px;
+	color: white;
+	margin: 30px;
 }
